# motion-planning-with-carla

./: .gitmodules  LICENSE  README.md
carla_client_interface/: CMakeLists.txt  package.xml  setup.py
carla_client_interface/launch/: carla_client_interface.launch
carla_client_interface/src/carla_client_interface/: carla_client_interface.py  route_planner.py  transforms.py
carla_controller_interface/: CMakeLists.txt  package.xml  setup.py
carla_controller_interface/launch/: carla_controller_interface.launch
carla_controller_interface/src/carla_controller_interface/: carla_controller_node.py  cutils.py  vehicle_pid_controller.py
carla_route_planner/: CMakeLists.txt  package.xml  setup.py
carla_route_planner/launch/: carla_route_planner.launch
carla_route_planner/src/carla_route_planner/: automatic_control.py  carla_route_planner.py
common/: CMakeLists.txt  package.xml
common/include/curves/: polynomial.hpp  quartic_polynomial.hpp  quintic_polynomial.hpp  simple_spline.hpp  spline2d.hpp
common/include/math/: coordinate_transformer.hpp  frenet_frame.hpp  math_utils.hpp
common/include/name/: string_name.hpp
common/include/polygon/: box2d.hpp
common/include/thread_pool/: thread_pool.hpp
common/src/curves/: polynomial.cpp  quartic_polynomial.cpp  qunitic_polynomial.cpp  simple_spline.cpp  spline2d.cpp  spline2d_test.cpp
common/src/math/: coordinate_transformer.cpp  frenet_frame.cpp  math_utils.cpp
common/src/polygon/: box2d.cpp  box2d_test.cpp
local_planner/: CMakeLists.txt  README.md  package.xml
local_planner/common/include/: box2d.hpp  coordinate_transformer.hpp  math_utils.hpp  polynomial.hpp  quartic_polynomial.hpp  quintic_polynomial.hpp  spline2d.hpp  st_data.hpp  string_name.hpp  vehicle_params.hpp
local_planner/common/src/: box2d.cpp  coordinate_transformer.cpp  math_utils.cpp  polynomial.cpp  quartic_polynomial.cpp  qunitic_polynomial.cpp  spline2d.cpp  spline2d_test.cpp  st_data.cpp
local_planner/include/: planner.hpp  planning_config.hpp  planning_context.hpp  trajectory_generator_base.hpp
local_planner/include/maneuver_manage/: change_lane_left_state.hpp  change_lane_right_state.hpp  emergency_stop_state.hpp  keep_lane_state.hpp  maneuver_planner.hpp  state.hpp  stop_at_sign.hpp
local_planner/include/maneuver_planner/: change_lane_left_state.hpp  change_lane_right_state.hpp  change_left_lane.hpp  change_left_lane_state.hpp  change_right_lane_state.hpp  emergency_stop.hpp  emergency_stop_state.hpp  follow_lane_state.hpp  keep_lane_state.hpp  maneuver_planner.hpp  overtake_state.hpp  state.hpp  stop.hpp  stop_state.hpp  tailgating_state.hpp
local_planner/include/motion_planner/: trajectory_planner.hpp
local_planner/include/motion_planner/frenet_lattice_planner/: end_condition_sampler.hpp  frenet_lattice_planner.hpp  polynomial_trajectory_evaluator.hpp  st_graph.hpp  trajectory_selector.hpp
local_planner/include/obstacle_filter/: obstacle.hpp  obstacle_filter.hpp
local_planner/include/planner/: trajectory_planner.hpp
local_planner/include/planner/frenet_lattice_planner/: end_condition_sampler.hpp  frenet_lattice_planner.hpp  st_graph.hpp  trajectory_evaluator.hpp  trajectory_selector.hpp
local_planner/include/reference_line/: reference_line.hpp  reference_line_generator.hpp  reference_line_smooth_ipopt_interface.hpp  reference_line_smoother.hpp  reference_point.hpp
local_planner/include/traffic_lights/: traffic_light.hpp  traffic_light_list.hpp
local_planner/include/vehicle_state/: vehicle_state.hpp
local_planner/launch/: local_planner.launch
local_planner/src/: draw.py  planner.cpp  planning_config.cpp  planning_context.cpp  planning_node.cpp
local_planner/src/collision_checker/: collision_checker.cpp  st_graph.cpp
local_planner/src/maneuver_manage/: change_lane_left_state.cpp  change_lane_right_state.cpp  emergency_stop_state.cpp  keep_lane_state.cpp  maneuver_planner.cpp  stop_at_sign.cpp
local_planner/src/maneuver_planner/: change_lane_left_state.cpp  change_lane_right_state.cpp  change_left_lane_state.cpp  change_right_lane.cpp  change_right_lane_state.cpp  emergency_stop_state.cpp  follow_lane.cpp  follow_lane_state.cpp  keep_lane_state.cpp  maneuver_planner.cpp  overtake_state.cpp  state.cpp  stop_at_sign.cpp  stop_state.cpp  tailgating_state.cpp
local_planner/src/motion_planner/frenet_lattice_planner/: end_condition_sampler.cpp  frenet_lattice_planner.cpp  polynomial_trajectory_evaluator.cpp  st_graph.cpp  trajectory_selector.cpp
local_planner/src/obstacle_filter/: obstacle.cpp  obstacle_filter.cpp
local_planner/src/planner/frenet_lattice_planner/: end_condition_sampler.cpp  frenet_lattice_planner.cpp  st_graph.cpp  trajectory_selector.cpp
local_planner/src/reference_line/: reference_line.cpp  reference_line_smooth_ipopt_interface.cpp  reference_line_smoother.cpp  reference_line_smoother_test.cpp  reference_point.cpp
local_planner/src/traffic_lights/: traffic_light.cpp  traffic_light_list.cpp
local_planner/src/vehicle_state/: vehicle_state.cpp
motion_planner/: CMakeLists.txt  package.xml
motion_planner/include/motion_planner/: planning_config.hpp
motion_planner/include/motion_planner/frenet_lattice_planner/: end_condition_sampler.hpp  polynomial_trajectory_evaluator.hpp
motion_planner/launch/: motion_planner.launch
motion_planner/param/: motion_planner_params.yaml  params.yaml
motion_planner/src/: motion_planner.cpp  motion_planner.hpp  planning_config.cpp  planning_config.hpp  planning_node.cpp  trajectory_planner.hpp
motion_planner/src/frenet_lattice_planner/: constraint_checker.cpp  constraint_checker.hpp  end_condition_sampler.cpp  end_condition_sampler.hpp  frenet_lattice_planner.cpp  frenet_lattice_planner.hpp  lattice_trajectory1d.cpp  lattice_trajectory_test.cpp  polynomial_trajectory_evaluator.cpp  polynomial_trajectory_evaluator.hpp
motion_planner/src/motion_planner/: planner.cpp  planner.hpp  planning_config.cpp  planning_context.cpp  planning_context.hpp
motion_planner/src/reference_generator/: reference_generator.cpp  reference_generator.hpp
(+254 files in other folders)
