<?xml version="1.0"?>
<package format="2">
  <name>carla_controller_interface</name>
  <version>0.0.1</version>
  <description>The carla_controller_interface package</description>
  <maintainer email="ldh@example.com">ldh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>carla_waypoint_types</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <export>
  </export>
</package>
