
<package format="2">
  <name>motion_planner</name>
  <version>0.0.0</version>
  <description>The motion_planner package</description>
  <maintainer email="ldh@todo.todo">ldh</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>carla_msgs</build_depend>
  <build_depend>derived_object_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>planning_msgs</build_depend>
  <build_depend>planning_srvs</build_depend>
  <build_depend>carla_waypoint_types</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>carla_msgs</build_export_depend>
  <build_export_depend>derived_object_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>planning_msgs</build_export_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>derived_object_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>planning_srvs</exec_depend>
  <exec_depend>planning_msgs</exec_depend>
  <exec_depend>carla_waypoint_types</exec_depend>
  <exec_depend>tf</exec_depend>
  <!--  The export tag contains other, unspecified, tags  -->
  <export>
    <!--  Other tools can request additional information be placed here  -->
  </export>
</package>